<resources>
    <string name="app_name">ParticipaSalvaterra</string>
    <string name="list_label">Lista</string>
    <string name="add_label">Nuevo</string>
    <string name="map_label">Mapa</string>
    <string name="profile_label">Perfil</string>
    <string name="dummy_title">Mas arboles</string>
    <string name="dummy_secondary_text">Nos gustaría tener mas aboles, son muy monos y dan sombra</string>
    <string name="dummy_supporting_text">Mas arboles</string>
    <string name="search_hint">Buscar una propuesta…</string>
    <string name="dummy_me_gusta">Me gusta</string>
    <string name="dummy_search_placeholder">Buscar…</string>
    <string name="dummy_no_me_gusta">No me gusta</string>
    <string name="exit_edit">¿Realmente desea descartar la propuesta?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">Salvaterrense</string>
    <string name="dummy_visibility">Perfil privado</string>
    <string name="profile_pìc_description">Imagen de perfil</string>
    <string name="my_proposals">Mis propuestas</string>
    <string name="proposals_i_liked">Propuestas que me han gustado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="report_proposal">Denunciar una propuesta</string>
    <string name="help">Ayuda</string>
    <string name="proposal_pics">Imágenes de la propuesta</string>
    <string name="new_title">Título de la propuesta</string>
    <string name="new_text">Cuerpo de la propuesta</string>
    <string name="new_location">Ubicación de la propuesta</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="new_proposal_confirmation">¿Desea crear una nueva propuesta?</string>
    <string name="yes">Si</string>
    <string name="no">no</string>
    <string name="out_of_bounds">Propuesta fuera del área de Salvaterra</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_title">Participa Salvaterra</string>
    <string name="eula_title">Términos y condiciones</string>
    <string name="register_confirmation">Al continuar aceptas los términos y condiciones del servicio disponibles en el <a href="https://celeiro.gal/">siguiente</a> enlace. Afirmas tener 18 años de edad al momento de completar este registro y que los datos introducidos son correctos.</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Cancelar</string>
    <string name="edit_proposal">Editar</string>
    <string name="remove_proposal">Eliminar</string>
    <string name="edit_profile">Editar</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="edit_name">Editar nombre</string>
    <string name="change_visibility">Cambiar visibilidad</string>
    <string name="pass">Contraseña</string>
    <string name="pass_check">Confirma la contraseña</string>
    <string name="podemos">PODEMOS</string>
    <string name="participa_salvaterra">PARTICIPA SALVATERRA</string>
</resources>