<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/photo_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBaseline_toBaselineOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_1_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_1_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_1_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_1_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_2_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_2_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_2_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_2_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/placeholder" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/photo_picker">

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:hint="@string/new_title"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_title_24">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            android:hint="@string/new_text"
            app:errorEnabled="true"
            app:endIconMode="clear_text">


            <com.google.android.material.textfield.TextInputEditText
                android:lines="6"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/input_layout"
        app:layout_constraintLeft_toRightOf="@id/input_layout">

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_location"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/minimap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".NewFragment" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>